--- a/src/demo/style.css
+++ b/src/demo/style.css
@@ -1,6 +1,13 @@
-.demo {
+.box {
   width: 200px;
   height: 200px;
   background-color: #bfa;
-  border: 10px solid red;
+  border: 10px solid orangered;
+  padding: 20px;
+  margin: 50px;
+}
+.box .inner {
+  width: 100%;
+  height: 100%;
+  background-color: orange;
 }
