--- a/src/demo/style.css
+++ b/src/demo/style.css
@@ -1,13 +1,12 @@
 .box {
-  width: 200px;
+  width: 500px;
   height: 200px;
   background-color: #bfa;
-  border: 10px solid orangered;
-  padding: 20px;
-  margin: 50px;
 }
 .box .inner {
-  width: 100%;
-  height: 100%;
+  width: 100px;
+  margin: 0 auto;
+  height: 180px;
+  border: 10px solid red;
   background-color: orange;
 }
