--- a/src/demo/style.css
+++ b/src/demo/style.css
@@ -1,23 +1,24 @@
+/* body {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+} */
+
+/* * {
+  margin: 0;
+  padding: 0;
+} */
+
 .box {
-  width: 200px;
-  height: 200px;
-  background-color: #bfa;
-}
-span {
-  /* width: 100px;
-  height: 100px; */
-  padding: 20px;
-  margin: 30px;
-  border: 6px solid red;
-  background-color: yellow;
-}
-a {
-  display: block;
-  visibility: visible;
-  /* visibility: hidden; */
-  /* display: inline-block; */
-  /* display: none; */
   width: 100px;
-  height: 60px;
-  background-color: orange;
+  height: 100px;
+  border: 1px solid #000;
 }
